...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/custom_app_bar_title_text_view"
        app:layout_constraintStart_toStartOf="@id/custom_app_bar_title_text_view"
        app:layout_constraintTop_toBottomOf="@id/custom_app_bar_title_text_view" />

    <ImageView
        android:id="@+id/trademark_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/in_hospice_trademark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/our_mission_image_button"
        app:layout_constraintStart_toEndOf="@+id/main_menu_image_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/authorization_image_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Authorization"
        android:src="@drawable/ic_authorization"
        app:layout_constraintBottom_toBottomOf="parent"
...
