...
    <string name="terms_of_use">Terms of use:</string>
    <string name="about">About</string>
    <string name="privacy_policy_url">https://vhospice.org/#/privacy-policy/</string>
    <string name="terms_of_use_url">https://vhospice.org/#/terms-of-use</string>
    <string name="company_info">© I-Teco, 2022</string>
    <string name="our_mission_title_text">Love is all</string>
    <string name="login2">login2</string>
</resources>
